; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/isdn/hisax/extr_bkm_a4t.c_readreg.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/isdn/hisax/extr_bkm_a4t.c_readreg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GCS_2 = common dso_local global i8 0, align 1
@PO_WRITE = common dso_local global i8 0, align 1
@PO_READ = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8 (i32, i64, i8)* @readreg to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal zeroext i8 @readreg(i32 %0, i64 %1, i8 zeroext %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  %6 = alloca i8, align 1
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  store i32 %0, i32* %4, align 4
  store i64 %1, i64* %5, align 8
  store i8 %2, i8* %6, align 1
  %9 = load i64, i64* %5, align 8
  %10 = inttoptr i64 %9 to i32*
  store i32* %10, i32** %8, align 8
  %11 = load i8, i8* @GCS_2, align 1
  %12 = zext i8 %11 to i32
  %13 = load i8, i8* @PO_WRITE, align 1
  %14 = zext i8 %13 to i32
  %15 = or i32 %12, %14
  %16 = load i8, i8* %6, align 1
  %17 = zext i8 %16 to i32
  %18 = or i32 %15, %17
  %19 = load i32*, i32** %8, align 8
  store i32 %18, i32* %19, align 4
  %20 = load i32*, i32** %8, align 8
  %21 = call i32 @__WAITI20__(i32* %20)
  %22 = load i32, i32* %4, align 4
  %23 = load i32, i32* @PO_READ, align 4
  %24 = or i32 %22, %23
  %25 = load i32*, i32** %8, align 8
  store i32 %24, i32* %25, align 4
  %26 = load i32*, i32** %8, align 8
  %27 = call i32 @__WAITI20__(i32* %26)
  %28 = load i32*, i32** %8, align 8
  %29 = load i32, i32* %28, align 4
  store i32 %29, i32* %7, align 4
  %30 = load i32, i32* %7, align 4
  %31 = trunc i32 %30 to i8
  ret i8 %31
}

declare dso_local i32 @__WAITI20__(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
